--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "devDependencies": {
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3000"
+    }
   }
 }
