--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.9.2",
+    "axios": "^0.19.0",
+    "element-ui": "^2.13.0",
+    "mavon-editor": "^2.7.7",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
+    "babel-plugin-component": "^1.1.1",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0"
   },
