--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.2",
+    "@nuxtjs/component-cache": "^1.1.5",
     "axios": "^0.19.0",
     "element-ui": "^2.13.0",
     "mavon-editor": "^2.7.7",
@@ -21,8 +22,10 @@
     "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
+    "@nuxtjs/proxy": "^1.3.3",
     "babel-plugin-component": "^1.1.1",
     "node-sass": "^4.13.0",
+    "postcss-px2rem": "^0.3.0",
     "sass-loader": "^8.0.0"
   },
   "config": {
